Animations + started pause menu

--- a/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -120,7 +120,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.187500
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -129,6 +129,9 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Inventory.Inventory
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/PauseMenu.PauseMenu
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -714,6 +717,65 @@ EnableInventory_C.Tags=True
 EnableInventory_C.Cooking=True
 EnableInventory_C.Input=True
 EnableInventory_C.Actor=True
+MovieScene2DTransformSection.Section=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+EnableInventory_C.Tick=True
+EnableInventory_C.Replication=True
+REINST_EnableInventory_C_141.TransformCommon=True
+REINST_EnableInventory_C_141.Shape=True
+REINST_EnableInventory_C_141.Navigation=True
+REINST_EnableInventory_C_141.Physics=True
+REINST_EnableInventory_C_141.Collision=True
+REINST_EnableInventory_C_141.Rendering=True
+REINST_EnableInventory_C_141.Tags=True
+REINST_EnableInventory_C_141.Cooking=True
+REINST_EnableInventory_C_141.Input=True
+REINST_EnableInventory_C_141.Actor=True
+FloatChannelKeyProxy.Key=True
+REINST_FirstPersonCharacter_C_376.None=True
+REINST_FirstPersonCharacter_C_376.Tick=True
+REINST_FirstPersonCharacter_C_376.Character=True
+REINST_FirstPersonCharacter_C_376.Camera=True
+REINST_FirstPersonCharacter_C_376.Pawn=True
+REINST_FirstPersonCharacter_C_376.Rendering=True
+REINST_FirstPersonCharacter_C_376.Replication=True
+REINST_FirstPersonCharacter_C_376.Input=True
+REINST_FirstPersonCharacter_C_376.Actor=True
+BackgroundBlur.Layout=True
+BackgroundBlur.Content=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Clipping=True
+BackgroundBlur.Navigation=True
+Overlay.Layout=True
+Overlay.Behavior=True
+Overlay.Render Transform=True
+Overlay.Performance=True
+Overlay.Clipping=True
+Overlay.Navigation=True
+REINST_FirstPersonCharacter_C_397.None=True
+REINST_FirstPersonCharacter_C_397.Tick=True
+REINST_FirstPersonCharacter_C_397.Character=True
+REINST_FirstPersonCharacter_C_397.Camera=True
+REINST_FirstPersonCharacter_C_397.Pawn=True
+REINST_FirstPersonCharacter_C_397.Rendering=True
+REINST_FirstPersonCharacter_C_397.Replication=True
+REINST_FirstPersonCharacter_C_397.Input=True
+REINST_FirstPersonCharacter_C_397.Actor=True
+PauseMenu_C.Appearance=True
+PauseMenu_C.Designer=True
+PauseMenu_C.Input=True
+PauseMenu_C.Interaction=True
+PauseMenu_C.Performance=True
+PauseMenu_C.Layout=True
+PauseMenu_C.Behavior=True
+PauseMenu_C.Render Transform=True
+PauseMenu_C.Clipping=True
+PauseMenu_C.Navigation=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -734,7 +796,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/User/Documents/GitHub/KV6002-Team-Project/KV6002/Content/FirstPersonBP/Maps
+UNR=Z:/KV6002-Team-Project/KV6002/Content/FirstPersonBP/Maps
 BRUSH=../../../Projects/KV6002/Content/
 FBX=../../../Projects/KV6002/Content/
 FBXAnim=../../../Projects/KV6002/Content/
@@ -1397,26 +1459,26 @@ User Created=True
 LastLogListing=AssetReimport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InventoryToggle
-MRUItem1=/Game/Geometry/Pickups/GunModule
-MRUItem2=/Game/FirstPersonBP/Blueprints/InventorySlot
-MRUItem3=/Game/FirstPersonBP/Blueprints/Inventory
-MRUItem4=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem5=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem6=/Game/StarterContent/Maps/StarterMap
-MRUItem7=/Game/Photography
-MRUItem8=/Game/PauseMenu
-MRUItem9=/Game/Materials/M_Glass
-MRUItem10=/Game/Materials/M_GlassYellow
-MRUItem11=/Game/Materials/M_GlassBlue
-MRUItem12=/Game/Materials/M_GlassRed
-MRUItem13=/Game/StarterContent/Materials/M_Glass
-MRUItem14=/Game/FirstPersonBP/Blueprints/radialHUD
-MRUItem15=/Game/Geometry/BasicBarrier
-MRUItem16=/Game/FirstPersonBP/Blueprints/Prompt
-MRUItem17=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem18=/Game/Materials/Decals/AirDecal
-MRUItem19=/Game/Materials/Grey
+MRUItem0=/Game/FirstPersonBP/Blueprints/Inventory
+MRUItem1=/Game/FirstPersonBP/Blueprints/InventorySlot
+MRUItem2=/Game/FirstPersonBP/Blueprints/PauseMenu
+MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem4=/Game/FirstPersonBP/Blueprints/Prompt
+MRUItem5=/Game/FirstPersonBP/Blueprints/radialHUD
+MRUItem6=/Game/EnableInventory
+MRUItem7=/Game/PauseMenu
+MRUItem8=/Game/InventoryToggle
+MRUItem9=/Game/Geometry/Pickups/GunModule
+MRUItem10=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem11=/Game/StarterContent/Maps/StarterMap
+MRUItem12=/Game/Photography
+MRUItem13=/Game/Materials/M_Glass
+MRUItem14=/Game/Materials/M_GlassYellow
+MRUItem15=/Game/Materials/M_GlassBlue
+MRUItem16=/Game/Materials/M_GlassRed
+MRUItem17=/Game/StarterContent/Materials/M_Glass
+MRUItem18=/Game/Geometry/BasicBarrier
+MRUItem19=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
 
 [MaterialEditor]
 PrimType=1
@@ -1534,7 +1596,7 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier.Distribution\" "
 ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModule=
-Object=
+Object="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 ParticleModuleVelocity="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
 ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
@@ -1559,9 +1621,9 @@ PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transfo
 Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-InventorySlot_C=
+InventorySlot_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Inventory_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Inventory_C=
 VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UniformGridPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -1571,8 +1633,13 @@ Border="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.Re
 ContentWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-radialHUD_C=
+radialHUD_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Prompt_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+SizeBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+FloatChannelKeyProxy="\"Object.Key.Value.Tangent\" "
+BackgroundBlur="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Overlay="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+PauseMenu_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
@@ -1652,5 +1719,50 @@ bShowAllAdvancedDetails=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bLabelBrowserVisible=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowViewportTransportControls=True
+bAllowPossessionOfPIEViewports=False
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+CurveVisibility=SelectedCurves
 
 
