Fixed gem issue

--- a/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ LastExecutedLaunchName=DESKTOP-L99SHIF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_Simulate
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -123,12 +123,19 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/PauseMenu.PauseMenu
+OpenAssetsAtExit=/Game/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Geometry/Pickups/GunModule.GunModule
+OpenAssetsAtExit=/Game/Geometry/EnableInventory.EnableInventory
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -783,6 +790,37 @@ PostProcessVolume.Rendering Features=True
 PostProcessVolume.PostProcessVolumeSettings=True
 PostProcessVolume.BrushSettings=True
 PostProcessVolume.Actor=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+MainMenuLevel_C.Tick=True
+MainMenuLevel_C.Replication=True
+MainMenuLevel_C.Input=True
+MainMenuLevel_C.Actor=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.CameraOptions=True
+CameraActor.Color Grading=True
+CameraActor.Film=True
+CameraActor.Mobile Tonemapper=True
+CameraActor.Lens=True
+CameraActor.Rendering Features=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Cooking=True
+CameraActor.Actor=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.Physics=True
+WorldSettings.Rendering=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+WorldSettings.Broadphase=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1463,29 +1501,29 @@ Uncategorized=False
 User Created=True
 
 [MessageLog]
-LastLogListing=AssetReimport
+LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/MainMenu
+MRUItem0=/Game/Geometry/EnableInventory
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem3=/Game/FirstPersonBP/Blueprints/Inventory
-MRUItem4=/Game/FirstPersonBP/Blueprints/PauseMenu
-MRUItem5=/Game/FirstPersonBP/Blueprints/InventorySlot
-MRUItem6=/Game/FirstPersonBP/Blueprints/Prompt
-MRUItem7=/Game/FirstPersonBP/Blueprints/radialHUD
-MRUItem8=/Game/EnableInventory
-MRUItem9=/Game/PauseMenu
-MRUItem10=/Game/InventoryToggle
-MRUItem11=/Game/Geometry/Pickups/GunModule
-MRUItem12=/Game/StarterContent/Maps/StarterMap
-MRUItem13=/Game/Photography
-MRUItem14=/Game/Materials/M_Glass
-MRUItem15=/Game/Materials/M_GlassYellow
-MRUItem16=/Game/Materials/M_GlassBlue
-MRUItem17=/Game/Materials/M_GlassRed
-MRUItem18=/Game/StarterContent/Materials/M_Glass
-MRUItem19=/Game/Geometry/BasicBarrier
+MRUItem3=/Game/MainMenuLevel
+MRUItem4=/Game/Geometry/Pickups/GunModule
+MRUItem5=/Game/MainMenu
+MRUItem6=/Game/FirstPersonBP/Blueprints/PauseMenu
+MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem8=/Game/FirstPersonBP/Blueprints/Inventory
+MRUItem9=/Game/FirstPersonBP/Blueprints/InventorySlot
+MRUItem10=/Game/FirstPersonBP/Blueprints/Prompt
+MRUItem11=/Game/FirstPersonBP/Blueprints/radialHUD
+MRUItem12=/Game/EnableInventory
+MRUItem13=/Game/PauseMenu
+MRUItem14=/Game/InventoryToggle
+MRUItem15=/Game/StarterContent/Maps/StarterMap
+MRUItem16=/Game/Photography
+MRUItem17=/Game/Materials/M_Glass
+MRUItem18=/Game/Materials/M_GlassYellow
+MRUItem19=/Game/Materials/M_GlassBlue
 
 [MaterialEditor]
 PrimType=1
@@ -1559,6 +1597,7 @@ bMaterialQualityUsed[2]=0
 /Game/Geometry/BasicBarrier.BasicBarrier=1
 /Game/PauseMenu.PauseMenu=1
 /Game/EnableInventory.EnableInventory=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1603,7 +1642,7 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier.Distribution\" "
 ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModule=
-Object=
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 ParticleModuleVelocity="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
 ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
@@ -1624,21 +1663,21 @@ ParticleModuleBeamBase="\"Object.LowFreq.NoiseRange\" \"Object.LowFreq.NoiseRang
 ParticleModuleBeamSource="\"Object.Source.Source\" \"Object.Source.Source.Distribution\" \"Object.Source.SourceTangent.Distribution\" \"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleBeamTarget="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
 HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 InventorySlot_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Inventory_C=
-VerticalBox="\"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Inventory_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UniformGridPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-TextBlock="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-TextLayoutWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 radialHUD_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Prompt_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -1655,13 +1694,15 @@ LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/MainMenu
-MRUItem2=/Game/StarterContent/Maps/StarterMap
-MRUItem3=/Game/Photography
+MRUItem1=/Game/MainMenuLevel
+MRUItem2=/Game/MainMenu
+MRUItem3=/Game/StarterContent/Maps/StarterMap
+MRUItem4=/Game/Photography
 
 [DetailCustomWidgetExpansion]
 ParticleModuleColor=ParticleModuleColor.Color.Distribution,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [DetailCategoriesAdvanced]
 ParticleSystemComponent.Rendering=False
@@ -1705,11 +1746,12 @@ ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Game/Geometry/Pickups/GunModule.GunModule;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/InventoryToggle.InventoryToggle;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Game/InventoryToggle.InventoryToggle;
 RecentlyPlaced=/Script/VREditor.FloatingText;
 RecentlyPlaced=/Game/Geometry/BasicBarrier.BasicBarrier;
 RecentlyPlaced=/Game/Materials/Fire.Fire;
