--- a/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,11 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Radial.Radial
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/PauseMenu.PauseMenu
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1044,6 +1048,14 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+Spacer.Layout=True
+Spacer.Appearance=True
+Spacer.Behavior=True
+Spacer.Render Transform=True
+Spacer.Performance=True
+Spacer.Clipping=True
+Spacer.Navigation=True
+K2Node_VariableSet.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1727,29 +1739,29 @@ User Created=False
 Common=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=AssetReimport
 
 [ContentBrowserRecent]
 MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem2=/Game/FirstPersonBP/Blueprints/PauseMenu
-MRUItem3=/Game/Geometry/EnableInventory
-MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem5=/Game/MainMenuLevel
-MRUItem6=/Game/Geometry/Pickups/GunModule
-MRUItem7=/Game/MainMenu
-MRUItem8=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem9=/Game/FirstPersonBP/Blueprints/Inventory
-MRUItem10=/Game/FirstPersonBP/Blueprints/InventorySlot
-MRUItem11=/Game/FirstPersonBP/Blueprints/Prompt
-MRUItem12=/Game/FirstPersonBP/Blueprints/radialHUD
-MRUItem13=/Game/EnableInventory
-MRUItem14=/Game/PauseMenu
-MRUItem15=/Game/InventoryToggle
-MRUItem16=/Game/StarterContent/Maps/StarterMap
-MRUItem17=/Game/Photography
-MRUItem18=/Game/Materials/M_Glass
-MRUItem19=/Game/Materials/M_GlassYellow
+MRUItem1=/Game/FirstPersonBP/Blueprints/PauseMenu
+MRUItem2=/Game/FirstPersonBP/Blueprints/Radial
+MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem4=/Game/Geometry/EnableInventory
+MRUItem5=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem6=/Game/MainMenuLevel
+MRUItem7=/Game/Geometry/Pickups/GunModule
+MRUItem8=/Game/MainMenu
+MRUItem9=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem10=/Game/FirstPersonBP/Blueprints/Inventory
+MRUItem11=/Game/FirstPersonBP/Blueprints/InventorySlot
+MRUItem12=/Game/FirstPersonBP/Blueprints/Prompt
+MRUItem13=/Game/FirstPersonBP/Blueprints/radialHUD
+MRUItem14=/Game/EnableInventory
+MRUItem15=/Game/PauseMenu
+MRUItem16=/Game/InventoryToggle
+MRUItem17=/Game/StarterContent/Maps/StarterMap
+MRUItem18=/Game/Photography
+MRUItem19=/Game/Materials/M_Glass
 
 [MaterialEditor]
 PrimType=1
@@ -1889,21 +1901,21 @@ ParticleModuleBeamNoise="\"Object.LowFreq.NoiseRange\" \"Object.LowFreq.NoiseRan
 ParticleModuleBeamBase="\"Object.LowFreq.NoiseRange\" \"Object.LowFreq.NoiseRange.Distribution\" \"Object.LowFreq.NoiseRangeScale.Distribution\" \"Object.LowFreq.NoiseSpeed\" \"Object.LowFreq.NoiseSpeed.Distribution\" \"Object.LowFreq.NoiseTangentStrength.Distribution\" \"Object.LowFreq.NoiseScale.Distribution\" "
 ParticleModuleBeamSource="\"Object.Source.Source\" \"Object.Source.Source.Distribution\" \"Object.Source.SourceTangent.Distribution\" \"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleBeamTarget="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
-HorizontalBox="\"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-PanelWidget="\"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot.Object.Layout.Layout"
+HorizontalBox="\"Object.Layout.Slot.Object.Layout.Layout"
+PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 InventorySlot_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Inventory_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UniformGridPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout"
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout"
 Border="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+ContentWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 radialHUD_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -1915,10 +1927,11 @@ Overlay="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.R
 PauseMenu_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Slider="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Slider="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Layout.Slot.Object.Layout.Layout"
 CameraComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 SceneComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 ActorComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
+Spacer="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
@@ -1934,7 +1947,7 @@ MRUItem4=/Game/Photography
 ParticleModuleColor=ParticleModuleColor.Color.Distribution,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
-CameraComponent=CameraComponent.Color Grading.Color Grading|Global,CameraComponent.Color Grading.Color Grading|Shadows,CameraComponent.Color Grading.Color Grading|Midtones,CameraComponent.Color Grading.Color Grading|Highlights,CameraComponent.Lens.Lens|Chromatic Aberration,CameraComponent.Lens.Lens|BloomAdvanced,CameraComponent.Lens.Lens|Bloom,CameraComponent.Lens.Lens|Camera,CameraComponent.Lens.Lens|Lens Flares,CameraComponent.Lens.Lens|Depth of FieldAdvanced,CameraComponent.Lens.Lens|Depth of Field,CameraComponent.Rendering Features.Rendering Features|Ambient Cubemap,CameraComponent.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.Rendering Features.Rendering Features|Ambient Occlusion,CameraComponent.Rendering Features.Rendering Features|Global Illumination,CameraComponent.Rendering Features.Rendering Features|Motion Blur,CameraComponent.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.Rendering Features.Rendering Features|Light Propagation Volume,CameraComponent.Rendering Features.Rendering Features|Screen Space Reflections,CameraComponent.Rendering Features.Rendering Features|Misc,
+CameraComponent=CameraComponent.Color Grading.Color Grading
 
 [DetailCategoriesAdvanced]
 ParticleSystemComponent.Rendering=False
