--- a/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,10 +130,9 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Radial.Radial
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/PauseMenu.PauseMenu
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [DetailCategories]
@@ -1056,6 +1055,19 @@ Spacer.Performance=True
 Spacer.Clipping=True
 Spacer.Navigation=True
 K2Node_VariableSet.Events=True
+Radial_C.Default=True
+Radial_C.Appearance=True
+Radial_C.Designer=True
+Radial_C.Input=True
+Radial_C.Interaction=True
+Radial_C.Performance=True
+Radial_C.Layout=True
+Radial_C.Behavior=True
+Radial_C.Render Transform=True
+Radial_C.Clipping=True
+Radial_C.Navigation=True
+SetProperty.Variable=True
+SetProperty.DefaultValueCategory=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1076,7 +1088,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=Z:/KV6002-Team-Project/KV6002/Content/FirstPersonBP/Maps
+UNR=C:/Users/User/Documents/GitHub/KV6002-Team-Project/KV6002/Content/FirstPersonBP/Maps
 BRUSH=../../../Projects/KV6002/Content/
 FBX=../../../Projects/KV6002/Content/
 FBXAnim=../../../Projects/KV6002/Content/
@@ -1903,11 +1915,11 @@ ParticleModuleBeamSource="\"Object.Source.Source\" \"Object.Source.Source.Distri
 ParticleModuleBeamTarget="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
 HorizontalBox="\"Object.Layout.Slot.Object.Layout.Layout"
 PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget=
+Visual=
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 InventorySlot_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+UserWidget=
 Inventory_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UniformGridPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -1916,7 +1928,7 @@ TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout"
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout"
 Border="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout"
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 radialHUD_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Prompt_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -1932,6 +1944,7 @@ CameraComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 SceneComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 ActorComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 Spacer="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Radial_C=
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
